<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade_courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Placeholder Course Name"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/grade_additionalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:text="10h, 3 ECTS"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade_courseForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="Course form" />

        <TextView
            android:id="@+id/grade_lecturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="Dr Lorem Ipsum DolorSitAmet"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/grade_labelFirstTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_grade_first_term"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/grade_firstTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.0"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/grade_labelSecondTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_grade_second_term"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/grade_secondTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.0"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/grade_labelThirdTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_grade_third_term"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/grade_thirdTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3.0"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>